# contrackt

./: ARCHITECTURE.md  BACKLOG.md  PoC.md  README.md  pyproject.toml
app/: main.py
app/services/: hashing.py  ocr.py
docs/: COMPLIANCE.md  DESIGN_SYSTEM.md  FRAUD_TRAINING_PLAYBOOK.md  FRONTEND.md  PRD.md  README.md  ROADMAP_2026.md  SENIOR_REVIEW.md  STACK.md  TODOS.md  TRAINING_PLAYBOOK.md
